--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/rock.css" />
   </head>
   <body>
-    <p class="title">Sabin Rock paper Scissor Game</p>
+    <p class="title">Rock paper Scissor</p>
 
     <button
       onclick="
